--- a/index.html
+++ b/index.html
@@ -1,1 +1,194 @@
-Clase
+<!DOCTYPE HTML>
+<!--
+	Hyperspace by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Fátima Fabián </title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+
+		<!-- Sidebar -->
+			<section id="sidebar">
+				<div class="inner">
+					<nav>
+						<ul>
+							<li><a href="#intro">Bienvenido</a></li>
+							<li><a href="#one">¿Quién soy yo?</a></li>
+							<li><a href="#two">¿Qué es lo haremos?</a></li>
+							<li><a href="#three">Contáctame Aquí</a></li>
+						</ul>
+					</nav>
+				</div>
+			</section>
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Intro -->
+					<section id="intro" class="wrapper style1 fullscreen fade-up">
+						<div class="inner">
+							<h1>¡Bienvenido!</h1>
+							<p>Este es un sitio web creado personal y añadiré las dinámicas acerca del </a><br />
+							en el curso de Laboratorio a la Innovación 2</p>
+							<ul class="actions">
+								<li><a href="#one" class="button scrolly">Leer más</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- One -->
+					<section id="one" class="wrapper style2 spotlights">
+						<section>
+							<a href="#" class="image"><img src="https://i.pinimg.com/564x/49/8d/bf/498dbfc9662cfe9d1874b56a5186b655.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Hola!</h2>
+									<p>Soy Fátima Fabián estudiante de publicidad y marketing digital c: Clickea en el botón para más información</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Leer más aquí</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="https://i.pinimg.com/564x/2b/fd/5a/2bfd5ae1f3ecd96a0b3fe2e7965d8d9a.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>¿Te gustan los gatos?</h2>
+									<p>Mishi, mishi ... ven aqui a jugar conmigo.</p>
+									<ul class="actions">
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="https://i.pinimg.com/564x/62/be/39/62be39e559b96196d4bc264a949a0e62.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Relatos</h2>
+									<p>"...Un secreto heredado de madre a hija pero pronto se romperá, alguien cortó el legado me imagino que serás tú..."</p>
+									<p>Interesante, no lo crees? </p>
+									<ul class="actions">
+										<li><a href="elements.html" class="button">Saber más aquí</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+					</section>
+
+				<!-- Two -->
+					<section id="two" class="wrapper style3 fade-up">
+						<div class="inner">
+							<h2>¿Qué es lo que haremos?</h2>
+							<p>Después de haber contado un poco sobre mi ahora si podemos hablar del curso. Por aquí veremos lo que hemos aprendido hasta ahora y sobre en lo que engloba.</p>
+							<div class="features">
+								<section>
+									<h3>Dinámicas</h3>
+									<p> Bajo ciertas actividades realizadas en clase observamos bajo detalle sobre lo qué es el arduino y las demás herramientas que lo conforman asi como las diferentes componentes electrónicos.</p>
+								</section>
+								<section>
+									<h3>Proyecto</h3>
+									<p> Propondremos  una pelicula que termine su uso además valorar cu pontencial</p>
+								</section>
+								<section>
+									<h3>Tecnología</h3>
+									<p>Armaremos desde cero nuestro prototipo por lo que utilizaremos en la parte digital nuestra herramienta llamada "Tinkercad" .</p>
+								</section>
+								<section>
+									<h3>Creatividad</h3>
+									<p>Se utilizara para realizar con más eficioncia los dias que no puedan vistar con urgencia. </p>
+								</section>
+							</div>
+							<ul class="actions">
+							</ul>
+						</div>
+					</section>
+
+				<!-- Three -->
+					<section id="three" class="wrapper style1 fade-up">
+						<div class="inner">
+							<h2>Mi contacto</h2>
+							<p>Cualquier duda que tuvieras, escribe aquí y con gusto te atenderé.</p>
+							<div class="split style1">
+								<section>
+									<form method="post" action="#">
+										<div class="fields">
+											<div class="field half">
+												<label for="name">Nombre</label>
+												<input type="text" name="name" id="name" />
+											</div>
+											<div class="field half">
+												<label for="email">Email</label>
+												<input type="text" name="email" id="email" />
+											</div>
+											<div class="field">
+												<label for="message">Mensaje</label>
+												<textarea name="message" id="message" rows="5"></textarea>
+											</div>
+										</div>
+										<ul class="actions">
+											<li><a href="" class="button submit">Enviar mensaje</a></li>
+										</ul>
+									</form>
+								</section>
+								<section>
+									<ul class="contact">
+										<li>
+											<h3>Dirección </h3>
+											<span>Psje. Abancay #159<br />
+											Urb. Caja de agua<br />
+											San Juan de Lurigancho</span>
+										</li>
+										<li>
+											<h3>Email</h3>
+											<a href="#">falufabianc@gmail.com</a>
+										</li>
+										<li>
+											<h3>Número</h3>
+											<span>+51 956284158</span>
+										</li>
+										<li>
+											<h3>Redes</h3>
+											<ul class="icons">
+												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+											</ul>
+										</li>
+									</ul>
+								</section>
+							</div>
+						</div>
+					</section>
+
+			</div>
+
+		<!-- Footer -->
+			<footer id="footer" class="wrapper style1-alt">
+				<div class="inner">
+					<ul class="menu">
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
